<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".menu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="4in"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/btn_actividad2"
            android:layout_width="2.2in"
            android:layout_height="match_parent"
            android:text="@string/Btn_actividad2"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"></Button>

        <Button
            android:id="@+id/btn_google"
            android:layout_width="2.2in"
            android:layout_height="match_parent"
            android:text="@string/Btn_google"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"></Button>

        <Button
            android:id="@+id/btn_alarma"
            android:layout_width="2.2in"
            android:layout_height="match_parent"
            android:text="@string/Btn_alarma"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"></Button>

        <Button
            android:id="@+id/btn_llamar"
            android:layout_width="2.2in"
            android:layout_height="match_parent"
            android:text="@string/Btn_llamar"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"></Button>

        <Button
            android:id="@+id/btn_mapa"
            android:layout_width="2.2in"
            android:layout_height="match_parent"
            android:text="@string/Btn_mapa"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"></Button>

        <Button
            android:id="@+id/btn_wifi"
            android:layout_width="2.2in"
            android:layout_height="match_parent"
            android:text="@string/Btn_wifi"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"></Button>
    </LinearLayout>

</LinearLayout>