<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Resultados">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/muestraNombre"></TextView>
        <TextView
            android:id="@+id/TextViewNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Aqui va el nombre"></TextView>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/muestraCedula"></TextView>
        <TextView
            android:id="@+id/TextViewCedula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Aqui va la cedula"></TextView>
    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/muestraFecha"></TextView>
        <TextView
            android:id="@+id/TextViewFechaNacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Aqui va la fecha"></TextView>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Votacion"></TextView>
    <TextView
        android:id="@+id/TextViewVoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Aqui va lo que votaste">
    </TextView>

    <LinearLayout
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <Button
            android:id="@+id/botonConfirmar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/Confirmar"></Button>
    </LinearLayout>
</LinearLayout>